--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Youtube</string>
     <string name="playlist">Playlist</string>
     <string name="try_again">Try Again</string>
+    <string name="no_internet">No internet</string>
 </resources>
